<resources>
    <string name="app_name">UsersApp</string>
    <string name="login_title">User App</string>
    <string name="favorite_list_title">Hello %s. You have %d favorites.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_submit">Log In</string>
    <string name="userId_hint">User ID</string>
    <string name="home_menu_option">Home</string>
    <string name="favorites_menu_option">Favorites</string>
    <string name="exit_menu_option">Exit</string>
    <string name="login_register">Sign Up</string>
    <string name="user_detail_from">From: %s \n%s\n%s</string>
    <string name="user_detail_gender">Gender: %s</string>
    <string name="full_name">%s %s</string>
    <string name="user_not_found">User not found \n Check credentials or sign up</string>
    <string name="email_mandatory_error">Email is Mandatory</string>
    <string name="password_mandatory_error">Password is Mandatory</string>
    <string name="invalid_email_error">Invalid email pattern</string>
    <string name="register_title">Sign Up</string>
</resources>