<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/lblLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/txtLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/box_shape"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/lblLoginTitle"
        app:layout_constraintStart_toStartOf="@+id/lblLoginTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblLoginTitle" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/box_shape"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/txtLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail" />

    <Button
        android:id="@+id/btnLoginSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login_submit"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/login_register"
        app:layout_constraintEnd_toEndOf="@id/btnLoginSubmit"
        app:layout_constraintStart_toStartOf="@id/btnLoginSubmit"
        app:layout_constraintTop_toBottomOf="@id/btnLoginSubmit"

        />

</androidx.constraintlayout.widget.ConstraintLayout>