<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/lblRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/box_shape"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/lblRegisterTitle"
        app:layout_constraintStart_toStartOf="@+id/lblRegisterTitle"
        app:layout_constraintTop_toBottomOf="@+id/lblRegisterTitle" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/box_shape"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/txtRegisterEmail"
        app:layout_constraintStart_toStartOf="@+id/txtRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterEmail" />

    <Button
        android:id="@+id/btnRegisterSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/register_title"
        app:layout_constraintEnd_toEndOf="@+id/txtRegisterPassword"
        app:layout_constraintStart_toStartOf="@+id/txtRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword" />

    <TextView
        android:id="@+id/lblRegisterError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/red"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/btnRegisterSubmit"
        app:layout_constraintStart_toStartOf="@id/btnRegisterSubmit"
        app:layout_constraintTop_toBottomOf="@id/btnRegisterSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>